--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
         "target": "es6", // ou une autre version selon vos besoins
         "module": "commonjs",
         "jsx": "react-jsx",
+        "checkJs": false,
         "strict": true,
+        "allowJs": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
