--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.3.0",
+    "@atlaskit/pragmatic-drag-and-drop-flourish": "^1.1.1",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,7 +21,7 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
